--- a/PHP/ex_pochette/pochette.html
+++ b/PHP/ex_pochette/pochette.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/2a53f181be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css/normalize.css">
     <link rel="stylesheet" href="./style.css/style.css">
-    <title>Document</title>
+    <title>Pochette</title>
 </head>
 <body>
-    
+    coucou bon courage
 </body>
 </html>
