--- a/PHP/ex_pochette/pochette.html
+++ b/PHP/ex_pochette/pochette.html
@@ -9,6 +9,89 @@
     <title>Pochette</title>
 </head>
 <body>
-    coucou bon courage
+    <header>
+        <section id="left_side">
+            <section id="control_up">
+                <button><i class="fa-solid fa-backward music_control"></i></button>
+                <button><i class="fa-solid fa-circle-play music_control"></i></button>
+                <button><i class="fa-solid fa-forward music_control"></i></button>
+            </section>
+
+            <section id="left_header_control_sound">
+                <button><i class="fa-solid fa-volume-low"></i></button>
+                <input type="range" name="volume" min="0" max="100" step="2" list="tickmarks" id="sound_bar">
+                <button><i class="fa-solid fa-volume-high"></i></button>
+            </section>
+        </section >
+
+        <section id="center_header">
+            <h3>Nom artiste</h3>
+            <p>Titre de la chanson</p>
+            <input type="range" name="volume" min="0" max="100" step="2" list="tickmarks"  id="timeline_control">
+        </section>
+
+        <section id="right_side_header">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input  type="text" name="search" placeholder="Recherche">
+        </section>
+    </header>
+
+    <article>
+        <section id="left_side_article">
+            <a href="#" class="border_a">Music</a> 
+            <a href="#" class="border_a">Vidéos</a>
+            <a href="#" class="border_a_2">Podcast</a>
+        </section>
+
+        <section id="right_side_article">
+            <section class="music_container">
+                <img src="./pochettes/340/1.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+
+            <section class="music_container">
+                <img src="./pochettes/340/2.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+
+            <section class="music_container">
+                <img src="./pochettes/340/3.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+
+            <section class="music_container">
+                <img src="./pochettes/340/4.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+
+            <section class="music_container">
+                <img src="./pochettes/340/5.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+
+            <section class="music_container">
+                <img src="./pochettes/340/6.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+
+            <section class="music_container">
+                <img src="./pochettes/340/7.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+
+            <section class="music_container">
+                <img src="./pochettes/340/1.jpg" alt="pochette d'album">
+                <h1>Titre</h1>
+                <p>Nom artiste</p>
+            </section>
+        </section>
+    </article>
 </body>
 </html>
